Fix technology list overflow issue

--- a/ui/src/app/shared/components/about/about.component.scss
+++ b/ui/src/app/shared/components/about/about.component.scss
@@ -30,6 +30,7 @@
 
 .about__technology-list {
     display: grid;
+    grid-column-gap: $margin;
     grid-template-columns: 1fr 1fr;
     margin-bottom: $margin;
 }
